--- a/nodePractick/package.json
+++ b/nodePractick/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "start": "npm run build && node build/server.js",
     "start:dev": "nodemon ./server.ts",
-    "build": "rimraf ./build && tsc"
+    "build": "rimraf ./build && tsc",
+    "fs": "node ./fileStore/fileMenager.ts"
   },
   "author": "Viktor <viktorhrimli101@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
